# quantum-eigenfaces

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/MNIST/: MNIST - Delta Tuning.ipynb  MNIST - Results.ipynb  MNIST - runtime.ipynb
notebooks/ORL/: ORL - Performance + Runtime.ipynb
notebooks/Yale/: Yale - Results and Runtime.ipynb
quantum_eigenfaces/package/: tmp.csv
quantum_eigenfaces/package/quantum_eigenfaces/: __init__.py  epsilon_tuning.py  linalg.py  misc.py  quantum_model.py  testing.py  tuning.py
quantum_eigenfaces/package/quantum_eigenfaces/resources/dataset/face_recognition/ORL/processed/: test.parquet.gzip  train.parquet.gzip  valid.parquet.gzip
quantum_eigenfaces/package/quantum_eigenfaces/utils/: processing.py  runtime.py  utils.py  visualization.py  yale.py
